added user features

--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -341,6 +341,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_features(data):\n",
+    "    features = []\n",
+    "    langs = pd.Series.from_array([lang_rt.get(x, np.mean(list(lang_rt.values()))) for x in data['user.lang']])\n",
+    "    time_zones = pd.Series.from_array([time_zone_rt.get(x, np.mean(list(time_zone_rt.values()))) for x in data['user.time_zone']])\n",
+    "    features.append(langs)\n",
+    "    features.append(time_zones)\n",
+    "    features.append(data['user.utc_offset'])\n",
+    "    features.append(data['user.statuses_count'])\n",
+    "    features.append(data['user.followers_count'])\n",
+    "    features.append(data['user.friends_count'])\n",
+    "    features.append(data['user.favourites_count'])\n",
+    "    features.append(data['user.listed_count'])\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
